# can-crab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.backend  README.md  docker-compose.yml  nginx.conf
.claude/: settings.json
.claude/agents/: angular-nginx-expert.md  rust-can-postgres-expert.md  tech-product-lead.md
.claude/hooks/: post-edit-build.sh
frontend/: package-lock.json  package.json
frontend/cancrab-frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/cancrab-frontend/src/: index.html  styles.css
frontend/cancrab-frontend/src/app/: app.css  app.html  app.routes.ts  app.spec.ts  app.ts  session.service.ts  websocket.service.ts
frontend/cancrab-frontend/src/app/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts
frontend/cancrab-frontend/src/app/auth/login/: login.component.css  login.component.html  login.component.ts
frontend/cancrab-frontend/src/app/landing/: landing.component.css  landing.component.html  landing.component.ts
frontend/cancrab-frontend/src/app/results/: chart.directive.ts  results.component.css  results.component.html  results.component.ts
frontend/cancrab-frontend/src/app/ws-demo/: ws-demo.component.html  ws-demo.component.ts
migrations/: 0001_initial.sql  0002_signal_message_name.sql
src/: error.rs  lib.rs  state.rs
src/db/: datasets.rs  mod.rs  signals.rs  users.rs
src/handlers/: anonymous.rs  auth.rs  datasets.rs  mod.rs  signals.rs
src/middleware/: auth.rs
src/models/: mod.rs
static/: index.html
(+3 files in other folders)
