[package]
name = "cancrab"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cancrab-server"
path = "src/bin/server.rs"

[dependencies]
axum = { version = "0.8.6", features = ["ws", "multipart"] }
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["fs"] }
mime_guess = "2.0"
dbc-rs = "0.4.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
